[package]
name = "lau-shell-interface"
version = "0.1.0"
edition = "2021"
description = "The present-moment interface — what the agent sees and feels inside PLATO"
license = "MIT"
repository = "https://github.com/SuperInstance/lau-shell-interface"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
